--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.codecraft</groupId>
   <artifactId>Excel2Html</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1.0</version>
   <packaging>jar</packaging>
 
   <name>Excel2Html</name>
@@ -25,31 +25,26 @@
       <dependency>
           <groupId>org.apache.poi</groupId>
           <artifactId>poi</artifactId>
-          <version>3.12</version>
+          <version>3.16</version>
       </dependency>
 
-      <dependency>
-          <groupId>org.apache.poi</groupId>
-          <artifactId>poi-examples</artifactId>
-          <version>3.12</version>
-      </dependency>
 
       <dependency>
           <groupId>org.apache.poi</groupId>
           <artifactId>poi-ooxml</artifactId>
-          <version>3.12</version>
+          <version>3.16</version>
       </dependency>
 
       <dependency>
           <groupId>org.apache.poi</groupId>
           <artifactId>poi-ooxml-schemas</artifactId>
-          <version>3.12</version>
+          <version>3.16</version>
       </dependency>
 
       <dependency>
           <groupId>org.apache.poi</groupId>
           <artifactId>poi-scratchpad</artifactId>
-          <version>3.12</version>
+          <version>3.16</version>
       </dependency>
       
       <dependency>
@@ -64,4 +59,18 @@
 		  <version>20080701</version>
 	 </dependency>
   </dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<encoding>utf-8</encoding>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
