--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    
+
       <dependency>
           <groupId>org.apache.poi</groupId>
           <artifactId>poi</artifactId>
@@ -46,31 +46,43 @@
           <artifactId>poi-scratchpad</artifactId>
           <version>3.16</version>
       </dependency>
-      
+
       <dependency>
 		  <groupId>org.apache.xmlbeans</groupId>
 		  <artifactId>xmlbeans</artifactId>
 		  <version>2.3.0</version>
 	 </dependency>
-	 
+
 	 <dependency>
 		  <groupId>org.json</groupId>
 		  <artifactId>json</artifactId>
 		  <version>20080701</version>
 	 </dependency>
+      <dependency>
+          <groupId>org.kamranzafar</groupId>
+          <artifactId>jtar</artifactId>
+          <version>2.3</version>
+      </dependency>
   </dependencies>
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<encoding>utf-8</encoding>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
 	</build>
 </project>
